[package]
name = "nature_demo_executor_restful"
version = "0.13.0"
authors = ["XueBin Li <llxxbb@yeah.net>"]
edition = "2018"
description = "A rustful converter for Nature-Demo"
repository = "https://github.com/llxxbb/Nature-Demo-Executor-Restful"
readme = "README.md"
license = "MIT"
keywords = ["nature", "demo", "restful"]
workspace = "../Nature"

[dependencies]
# normal
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1.0"
serde = "1.0"
serde_derive = "1.0"
lazy_static = "1.4"
uuid = { version = "0.8", features = ["v3"] }
log = "0.4"
futures = "0.3"

#config
dotenv = "0.15"

# web
reqwest = { version = "0.10", features = ["blocking", "json"] }
actix-web = "2.0"
actix-rt = "1.0"
tokio = { version = "0.2", features = ["full"] }

# self project group
nature_common = {path = "../Nature-Common", version = "0.13.0"}
nature_demo_common = {path = "../Nature-Demo-Common", version = "0.13.0"}

